# Scraps

./: .gitignore  LICENSE  README.md
amqp/: README.md
ansible/: dterei  mc-c5
asm/: add  add.c  add.s  nolib.c
c/: add.c  argcv.c  argcv.s  argcv2.s  arrays.c  arrays_pointers.c  asm.c  assert-str.c  bool.c  c_gcc_test.c  duptest.c  duptestfile  enum-order.c  fp.c  funAndExtern.c  func.c  funcPtr.c  fwrite-trunc.c  gmptest.c  infin  infin.c  int_truth.c  intmin_sigpfe.c  io-flush.c  mult-write.c  notnot.c  null-load.c  null-struct.c  printff  printff.c  recursive_cpp.c  replicate.c  replicate2.c  replicate3.c  setjmp.c  sizes.c  spec-numbers.c  template.c  terminated-fio.c  test  (+3 more)
chronosphere/: a  b  test_dash2.yml  test_dashboard.yml
cpp/: alloc.cc  alloc_gnu.cc  baseSelect.cc  boost_alloc.cc  catch_test.cc  channel.cc  cin.cpp  constexpr.cpp  constmethod.cpp  cv.cc  exception.cc  exit.cc  func.cpp  function.cc  gen.cpp  gen.h  hack.cpp  inherit.cpp  jem.cc  lambda.cpp  lambda_generic.cc  lambda_mutable.cc  lambda_return.cpp  life.cpp  main.cpp  mem.cpp  minheap.cpp  move_copy.cc  new.cc  ns_struct_conflict.cc  nullptr.cpp  ostream_iter.cpp  package_task.cpp  rebind.cc  rlvalues.cc  sfinae.cc  shared_ptrs.cpp  static_order.cc  templated_superclass.cpp  templates.cpp  (+9 more)
docker/: README.md
envoy/: Dockerfile
euler/: README
fbgrab/: scrape.py
gcc/: Makefile  ctors.c  dynamic_assert.c
ghc/: a.out  sec.c  sec.sh  sections.c  sections.ll  sections.sh  sections2.c  testAsSubLimit.hs
go/: .gitignore  Exec.go  (+22 more)
resy/: Makefile  README.md  main.py  pyproject.toml
(+416 files in other folders)
