[tool.poetry]
name = "resy"
version = "0.1.0"
description = "My resy booker"
authors = ["David Terei <code@davidterei.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
selenium = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
